modified:   css/main.css 	modified:   erotique.html 	deleted:    "images/Capture d\342\200\231\303\251cran_26-9-2024_41829_.jpeg" 	new file:   "images/Cohabitation forc\303\251e.jpg" 	deleted:    images/img1.jpg 	deleted:    images/img3.jpg 	deleted:    images/img5.jpg 	deleted:    images/imgq.jpeg 	deleted:    images/logo.png 	deleted:    images/menu-backgroud.jpg 	new file:   images/smooth .jpg 	modified:   index.html 	modified:   lecteur.html 	modified:   recherche.html 	modified:   tarif.html

--- a/index.html
+++ b/index.html
@@ -106,51 +106,7 @@
         <!-- /Hero Section -->
 
         <!-- Nouveautés -->
-        <style>
-            .image-carousel {
-                overflow: hidden;
-                /* Cache le contenu en dehors du cadre */
-                position: relative;
-                width: 100%;
-                height: 267px;
-                /* Ajustez si besoin */
-                padding: 10px 0;
-            }
 
-            .image-container {
-                display: flex;
-                animation: scroll 20s linear infinite;
-                height: 100%;
-            }
-
-            .rectangle {
-                height: 267px;
-                margin-right: 20px;
-                object-fit: cover;
-                border-radius: 8px;
-            }
-
-            @keyframes scroll {
-                0% {
-                    transform: translateX(100%);
-                }
-
-                100% {
-                    transform: translateX(-100%);
-                }
-            }
-
-            /* Styles adaptatifs pour s'assurer que le carrousel fonctionne sur mobile */
-            @media (max-width: 768px) {
-                .rectangle {
-                    height: 200px;
-                }
-
-                .image-container {
-                    animation-duration: 30s;
-                }
-            }
-        </style>
         <div>
             <h2 class="text-center mb-4">Nouveautés</h2>
         </div>
@@ -162,7 +118,12 @@
                     class="rectangle">
                 <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
                 <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
-                <!-- Ajoutez d'autres images ici -->
+                <img src="images/smooth .jpg" alt="ma brute" class="rectangle">
+                <img src="images/Cohabitation forcée.jpg" alt="ma brute" class="rectangle">
+                <img src="images/Section 69.png" alt="Section 69" class="rectangle">
+                <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
+                <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
+                    class="rectangle">
             </div>
         </div>
 
@@ -179,12 +140,22 @@
                     <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
                     <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
                     <!-- Ajoutez d'autres images ici -->
+                    <img src="images/smooth .jpg" alt="ma brute" class="rectangle">
+                    <img src="images/Cohabitation forcée.jpg" alt="ma brute" class="rectangle">
+                    <img src="images/Section 69.png" alt="Section 69" class="rectangle">
+                    <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
+                    <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
+                        class="rectangle">
+
+                    <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
+                    <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
                 </div>
             </div>
 
         </section>
-
         <!-- Section Érotiques -->
+
+        <!-- Espaces Publicitaire -->
         <section id="Espaces Publicitaire" class="my-5">
             <h2 class="text-center mb-4">Espaces Publicitaire</h2>
             <div class="age-warning text-center">Contactez-nous pour publier vos articles sur notre site.</div>
@@ -200,8 +171,9 @@
                      Ajoutez d'autres images ici 
                 </div>
             </div>-->
-
+            <!-- Espaces Publicitaire -->
         </section>
+
         <!-- pieds de page -->
         <footer>
             <div class="footer-container justify-content-center">
