--- a/recherche.html
+++ b/recherche.html
@@ -101,6 +101,25 @@
         </section>
         <!-- /Hero Section -->
 
+        <!-- Espaces Publicitaire -->
+        <section id="Espaces Publicitaire" class="my-5">
+            <h2 class="text-center mb-4">Espaces Publicitaire</h2>
+            <div class="age-warning text-center">Contactez-nous pour publier vos articles sur notre site.</div>
+            <div class="age-warning text-center"> Bientot disponible.</div>
+            <!--     <div class="image-carousel">
+                <div class="image-container">
+                    <img src="images/Section 69.png" alt="Section 69" class="rectangle">
+                    <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
+                    <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
+                        class="rectangle">
+                    <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
+                    <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
+                     Ajoutez d'autres images ici 
+                </div>
+            </div>-->
+            <!-- Espaces Publicitaire -->
+        </section>
+
         <!-- Section de recherche -->
         <section id="recherche">
             <h2 class="section-title text-center">Recherche</h2>
