--- a/erotique.html
+++ b/erotique.html
@@ -153,11 +153,62 @@
 							data-pdf-url="https://drive.google.com/file/d/1aM-fJN92UAJHPRAe6deFiaC63ON454EG">Ouvrir</a>
 					</div>
 				</div>
+
+				<!-- 5 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
+					data-id="4">
+					<img src="images/ma brute.jpg" class="card-img-top manga-cover" alt="Partageuse de fesses s01">
+					<div class="card-body d-flex flex-column text-center">
+						<div class="manga-title">Ma brute <br>ep 1</div>
+						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/1s48PhN_Mdght1cOVzVjLPJjn1foRsrk8/view?usp=drive_link">Ouvrir</a>
+					</div>
+				</div>
+
+				<!-- 6 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
+					data-id="4">
+					<img src="images/smooth .jpg" class="card-img-top manga-cover" alt="Partageuse de fesses s01">
+					<div class="card-body d-flex flex-column text-center">
+						<div class="manga-title">Smooth <br> ep 1</div>
+						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/1JxielFqrorcR3Rq2zHoVNTdtVENcVBsW/view?usp=drive_link">Ouvrir</a>
+					</div>
+				</div>
+
+				<!-- 7 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
+					data-id="4">
+					<img src="images/Cohabitation forcée.jpg" class="card-img-top manga-cover"
+						alt="Partageuse de fesses s01">
+					<div class="card-body d-flex flex-column text-center">
+						<div class="manga-title">Cohabitation forcée ep 1</div>
+						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/1akPepbvUrpuFIY9NdQRxFBp1xtFktmvV/view?usp=drive_link">Ouvrir</a>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- Section Érotiques -->
 
-
+		<!-- Espaces Publicitaire -->
+		<section id="Espaces Publicitaire" class="my-5">
+			<h2 class="text-center mb-4">Espaces Publicitaire</h2>
+			<div class="age-warning text-center">Contactez-nous pour publier vos articles sur notre site.</div>
+			<div class="age-warning text-center"> Bientot disponible.</div>
+			<!--     <div class="image-carousel">
+		<div class="image-container">
+			<img src="images/Section 69.png" alt="Section 69" class="rectangle">
+			<img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
+			<img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
+				class="rectangle">
+			<img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
+			<img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
+			 Ajoutez d'autres images ici 
+		</div>
+	</div>-->
+			<!-- Espaces Publicitaire -->
+		</section>
 
 		<!-- pieds de page -->
 		<footer>
