--- a/lecteur.html
+++ b/lecteur.html
@@ -97,25 +97,44 @@
             <iframe id="pdf-frame" src="" style="width: 100%; height: 100vh; border: none;"></iframe>
         </div>
 
-        <!-- pieds de page -->
-        <footer>
-            <div class="footer-container justify-content-center">
-                <div class="footer-col">
-                    <h3>À propos de nous</h3>
-                    <p>eROS est un site web dédié à la diffusion de mangas japonais et érotiques en PDF.</p>
+        <!-- Espaces Publicitaire -->
+        <section id="Espaces Publicitaire" class="my-5">
+            <h2 class="text-center mb-4">Espaces Publicitaire</h2>
+            <div class="age-warning text-center">Contactez-nous pour publier vos articles sur notre site.</div>
+            <div class="age-warning text-center"> Bientot disponible.</div>
+            <!--     <div class="image-carousel">
+                <div class="image-container">
+                    <img src="images/Section 69.png" alt="Section 69" class="rectangle">
+                    <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
+                    <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
+                        class="rectangle">
+                    <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
+                    <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
+                     Ajoutez d'autres images ici 
                 </div>
-                <div class="footer-col">
-                    <h3>Contact</h3>
-                    <p>Si vous avez des questions ou des suggestions, n'hésitez pas à nous contacter.</p>
-                    <p><a href="mailto:admin@e-ros.xyz">admin@e-ros.xyz</a></p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 eROS. Tous droits réservés.</p>
-            </div>
-        </footer>
+            </div>-->
+            <!-- Espaces Publicitaire -->
+        </section>
+
     </main>
 
+    <!-- pieds de page -->
+    <footer>
+        <div class="footer-container justify-content-center">
+            <div class="footer-col">
+                <h3>À propos de nous</h3>
+                <p>eROS est un site web dédié à la diffusion de mangas japonais et érotiques en PDF.</p>
+            </div>
+            <div class="footer-col">
+                <h3>Contact</h3>
+                <p>Si vous avez des questions ou des suggestions, n'hésitez pas à nous contacter.</p>
+                <p><a href="mailto:admin@e-ros.xyz">admin@e-ros.xyz</a></p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 eROS. Tous droits réservés.</p>
+        </div>
+    </footer>
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
             class="bi bi-arrow-up-short"></i></a>
