modified:   erotique.html 	modified:   index.html 	modified:   recherche.html 	modified:   tarif.html

--- a/index.html
+++ b/index.html
@@ -54,10 +54,20 @@
     <!-- Main CSS File -->
     <link href="css/main.css" rel="stylesheet">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JXD11BLTQR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-JXD11BLTQR');
+    </script>
     <!-- =======================================================
           * @HopSyder Nexus Partners 
         ======================================================== -->
 </head>
+
 
 <body class="index-page">
 
