--- a/erotique.html
+++ b/erotique.html
@@ -11,6 +11,15 @@
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/x-icon" href="images/favico.png">
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-JXD11BLTQR"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-JXD11BLTQR');
+	</script>
 
 	<!-- Meta description pour SEO -->
 	<meta name="description"
