--- a/tarif.html
+++ b/tarif.html
@@ -54,6 +54,16 @@
     <!-- Main CSS File -->
     <link href="css/main.css" rel="stylesheet">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JXD11BLTQR"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-JXD11BLTQR');
+    </script>
+
     <!-- =======================================================
           * @HopSyder Nexus Partners 
         ======================================================== -->
