modified:   erotique.html 	new file:   fond/1.png 	new file:   fond/10.png 	new file:   fond/11.png 	new file:   fond/12.png 	new file:   fond/13.png 	new file:   fond/14.png 	new file:   fond/15.png 	new file:   fond/16.png 	new file:   fond/17.png 	new file:   fond/18.png 	new file:   fond/19.png 	new file:   fond/2.png 	new file:   fond/20.png 	new file:   fond/21.png 	new file:   fond/22.png 	new file:   fond/23.png 	new file:   fond/24.png 	new file:   fond/25.png 	new file:   fond/26.png 	new file:   fond/27.png 	new file:   fond/28.png 	new file:   fond/29.png 	new file:   fond/3.png 	new file:   fond/30.png 	new file:   fond/31.png 	new file:   fond/32.png 	new file:   fond/33.png 	new file:   fond/34.png 	new file:   fond/35.png 	new file:   fond/36.png 	new file:   fond/37.png 	new file:   fond/38.png 	new file:   fond/39.png 	new file:   fond/4.png 	new file:   fond/40.png 	new file:   fond/41.png 	new file:   fond/42.png 	new file:   fond/43.png 	new file:   fond/44.png 	new file:   fond/45.png 	new file:   fond/46.png 	new file:   fond/47.png 	new file:   fond/48.png 	new file:   fond/5.png 	new file:   fond/50.png 	new file:   fond/51.png 	new file:   fond/52.png 	new file:   fond/53.png 	new file:   fond/54.png 	new file:   fond/55.png 	new file:   fond/56.png 	new file:   fond/57.png 	new file:   fond/58.png 	new file:   fond/59.png 	new file:   fond/6.png 	new file:   fond/60.png 	new file:   fond/61.png 	new file:   fond/7.png 	new file:   fond/8.png 	new file:   fond/9.png 	deleted:    index copy.html 	modified:   index.html 	modified:   recherche.html

--- a/erotique.html
+++ b/erotique.html
@@ -168,7 +168,7 @@
 					data-id="4">
 					<img src="images/ma brute.jpg" class="card-img-top manga-cover" alt="Partageuse de fesses s01">
 					<div class="card-body d-flex flex-column text-center">
-						<div class="manga-title">Ma brute <br>ep 1</div>
+						<div class="manga-title">Ma brute<br>ep 1</div>
 						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
 							data-pdf-url="https://drive.google.com/file/d/1s48PhN_Mdght1cOVzVjLPJjn1foRsrk8/view?usp=drive_link">Ouvrir</a>
 					</div>
@@ -179,7 +179,7 @@
 					data-id="4">
 					<img src="images/smooth .jpg" class="card-img-top manga-cover" alt="Partageuse de fesses s01">
 					<div class="card-body d-flex flex-column text-center">
-						<div class="manga-title">Smooth <br> ep 1</div>
+						<div class="manga-title">Soothe Me<br> ep 1</div>
 						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
 							data-pdf-url="https://drive.google.com/file/d/1JxielFqrorcR3Rq2zHoVNTdtVENcVBsW/view?usp=drive_link">Ouvrir</a>
 					</div>
